tests/machine/x/erlang/group_by_multi_join_sort.error
exit status 127
tests/machine/x/erlang_new/group_by_multi_join_sort.erl:11:961: syntax error before: ','
escript: There were compilation errors.
